# manim-frechet-distance

./: .gitignore  README.md  index.html  pyproject.toml  utils.ipynb
.github/workflows/: build.yml  build_docs.yml  build_presentation.yml
Frechet-Distance/: index.html  project.json
Fréchet-Distance/: index.html  project.json
docs/: literature.bib  paper.tex  titlepage.tex
docs/images/frechet_distance/: discrete-frechet-distance-upper-bound.ipe  discrete-frechet-distance-upper-bound.ipe.autosave.ipe  frechet-distance-example.ipe  frechet-distance-example.ipe.autosave.ipe  free_space_monotone_curve.tex  free_space_polygonal_curves.tex  free_space_single_cell.tex  line_segments.tex  polygonal_curves.tex  square-ellipse-intersection.ipe  square-ellipse-intersection.ipe.autosave.ipe  weak-frechet-distance-example.ipe
docs/images/hausdorff/: hausdorff-distance-bad-example.ipe  hausdorff-distance-bad-example.ipe.autosave.ipe  hausdorff-distance-example.ipe
docs/src/: Frechet_Distance_Plots.ipynb
manim_frechet_distance/: presentation.py
src/: Frechet_Distance_Plots.ipynb
